Fixed Alignment on add spending form fields

--- a/client/src/AddSpending.css
+++ b/client/src/AddSpending.css
@@ -1,16 +1,12 @@
 /* Add Spending Form Container */
 .add-spending-form-container {
     margin-top: 80px;
-}
-
-.form-group {
     margin-left: 40px;
-    margin-top: 20px;
 }
 
 .form-control {
     margin-right: 0px;
-    width: 20%;
+    width: 30%;
 }
 
 /* Amount of spending added on form */
@@ -20,7 +16,6 @@
 
 /* Button to add more items */
 .add-more-items-btn {
-    margin-left: 250px;
     margin-top: 10px;
 }
 
@@ -28,13 +23,12 @@
 .add-category-btn {
     display: block;
     padding-right: 17px;
-    margin-left: 250px;
     margin-top: 15px;
 }
 
 /* Button to submit add new spending form*/
 .submit-new-spending-btn {
-    margin-left: -60px;
     margin-top: 20px;
+    margin-left: -20px;
 }
 
